ViTables ChangeLog
==================
** November 14, 2010 **
All old-style signal/lot connections replaced with new-style connections.

** November 05, 2010 **
Several modules refactored. Code for querying tables has been debugged.

** November 04, 2010 **
The Preferences dialog has been debugged and refactored.

Signals and slots are connected via setUi method in several modules.

** November 03, 2010 **
The Preferences dialog has been improved.

** November 02, 2010 **
A couple of pure Python modules have been split in a Python part and a ui part.

** October 30, 2010 **
The utils.py module has been simplified.

Some unwanted directories have been removed from the repository.

Copyright statements updated in every source file.

The method used for dynamically load UI files has been simplified.

** October 26, 2010 **
Information about version number and copyright has been updated.

** December 29, 2009 **
Module nodePropDlg.py has been refactored and simplified.

Some code dealing with PyTables datatypes and numpy datatypes has been cleaned.

** December 28, 2009 **
Rows insertion/deletion in the tree view has been simplified and debugged.

** December 27, 2009 **
The import_csv and export_csv plugins have been improved.

** December 23, 2009 **
Inconsistencies in the spacing between lines have been fixed.

Tree view usability improved.

** December 21, 2009 **
Added the new plugins_menu.py plugin. It show info about the loaded plugins.

** December 20, 2009 **
The code dealing with application setup has been debugged and refactored.

** December 19, 2009 **
The plugins framework has been debugged and refactored and has a new ui.

** December 15, 2009 **
The deprecated (in Python 2.6) sets module is not used anymore.

** December 14, 2009 **
The code dealing with the tree view has been debugged and simplified.

** December 11, 2009 **
Fixed a subtle bug in the automatic sync between tree view pane and workspace.

** December 10, 2009 **