@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** November 15, 2010 **
+Some improvements applied to the docBrowser subpackage.
+
 ** November 14, 2010 **
 All old-style signal/lot connections replaced with new-style connections.
 
